# OpenRacing-swarm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  codecov.yml
.cargo/: config.toml
.config/: hakari.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.openracing-spec/: README.md  index.toml
.rails/: index.toml
crates/changelog/: Cargo.toml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: client.rs  completion.rs  error.rs  main.rs  output.rs
crates/cli/src/client/: connection.rs
crates/cli/src/commands/: device.rs  diag.rs  firmware.rs  game.rs  hardware.rs  mod.rs  moza.rs  safety.rs  telemetry.rs
crates/cli/src/commands/hardware/: io.rs  roles.rs
crates/cli/src/commands/moza/: artifact_paths.rs  descriptor_input.rs  formatting.rs  json_value.rs  safety_checks.rs  write_checks.rs
crates/cli/src/commands/telemetry/: normalized.rs  protocol.rs  types.rs  virtual_ffb.rs
crates/cli/tests/: cli_arg_validation_tests.rs  cli_command_tests.rs  cli_comprehensive_e2e_tests.rs  cli_e2e_tests.rs  cli_hardening_tests.rs  cli_output_snapshots.rs
crates/cli/tests/snapshots/: cli_comprehensive_e2e_tests__error_snapshots__error_missing_telemetry_subcommand.snap  cli_comprehensive_e2e_tests__help_snapshots__device_list_help.snap  cli_comprehensive_e2e_tests__help_snapshots__device_status_help.snap  cli_comprehensive_e2e_tests__help_snapshots__moza_help.snap  cli_comprehensive_e2e_tests__help_snapshots__moza_pit_house_proof_help.snap  cli_comprehensive_e2e_tests__help_snapshots__moza_simulator_ffb_smoke_help.snap  cli_comprehensive_e2e_tests__help_snapshots__moza_simulator_telemetry_proof_help.snap  cli_output_snapshots__cli_hardware_doctor_help.snap  cli_output_snapshots__cli_help_text.snap  cli_output_snapshots__cli_missing_args_error.snap  cli_output_snapshots__cli_telemetry_help.snap
crates/compat/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/tests/: ffb_jitter_isolation_tests.rs  virtual_device_integration.rs  zero_alloc_integration.rs
crates/hbp/: Cargo.toml
crates/hid-accuforce-protocol/: Cargo.toml
crates/hid-asetek-protocol/: Cargo.toml
crates/hid-cammus-protocol/: Cargo.toml
crates/hid-capture/: Cargo.toml
crates/hid-capture/src/: lib.rs  main.rs
crates/hid-cube-controls-protocol/: Cargo.toml
crates/hid-fanatec-protocol/: Cargo.toml
crates/hid-ffbeast-protocol/: Cargo.toml
crates/hid-heusinkveld-protocol/: Cargo.toml
crates/hid-leo-bodnar-protocol/: Cargo.toml
crates/hid-moza-protocol/: Cargo.toml
crates/hid-moza-protocol/fixtures/moza-r5-2026-05-13/: es_controls.json  ks_controls.json  r5_aggregated_idle_after_controls.json  r5_brake_only_sweep.json  r5_clutch_only_sweep.json  r5_handbrake_only_sweep.json  r5_idle.json  r5_steering_sweep.json  r5_throttle_only_sweep.json
crates/hid-moza-protocol/fixtures/synthetic/: parser_replay_smoke.json
crates/hid-moza-protocol/src/: lib.rs  protocol.rs  report.rs
crates/hid-moza-protocol/src/serial/: fake_transport.rs  frame.rs  mod.rs  response_semantics.rs  status_probe.rs  vendor_authority.rs
crates/hid-moza-protocol/tests/: deep_protocol.rs  fixture_replay_tests.rs  moza_deep_tests.rs  vendor_authority_registry.rs  vendor_fake_serial_transport.rs  vendor_passive_tuple_samples.rs  vendor_response_semantic_fixtures.rs  vendor_serial_codec_fixtures.rs  vendor_status_probe.rs
crates/hid-openffboard-protocol/: Cargo.toml
crates/hid-pxn-protocol/: Cargo.toml
crates/hid-thrustmaster-protocol/: Cargo.toml
crates/hid-vrs-protocol/: Cargo.toml
crates/input-maps/: Cargo.toml
crates/integration-tests/: Cargo.toml
crates/integration-tests/tests/: acceptance_tests.rs  bdd_acceptance_tests.rs  bdd_game_scenarios.rs  bdd_matrix_parity_tests.rs  bdd_scenarios.rs  bdd_user_scenario_tests.rs  cross_crate_hardening_tests.rs  cross_crate_pipeline_tests.rs  cross_crate_tests.rs  e2e_game_workflow_tests.rs  edge_case_tests.rs  full_stack_e2e.rs  game_coverage_tests.rs  game_support_matrix_tests.rs  game_telemetry_integration_tests.rs  integration_tests.rs  moza_e2e.rs  normalization_consistency_tests.rs  performance_gate_tests.rs  performance_validation_tests.rs  plug_and_play.rs  plugin_integration_tests.rs  protocol_constant_cross_validation.rs  rc_integration_tests.rs  regression_tests.rs  soak_tests.rs  stress_tests.rs  telemetry_e2e_round_trip_tests.rs  telemetry_e2e_tests.rs  telemetry_round_trip_tests.rs  wave15_hardening_integration_tests.rs
crates/ks/: Cargo.toml
crates/moza-wheelbase-report/: Cargo.toml
crates/moza-wheelbase-report/src/: lib.rs
crates/openracing-atomic/: Cargo.toml
crates/openracing-calibration/: Cargo.toml
crates/openracing-capture-format/: Cargo.toml
crates/openracing-capture-format/src/: fixture.rs  lib.rs  replay.rs  synthetic.rs
crates/openracing-capture-ids/: Cargo.toml
crates/openracing-crypto/: Cargo.toml
docs/: CLIPPY_POLICY.md  DEVELOPMENT.md  DEVICE_CAPABILITIES.md  DEVICE_SUPPORT.md  FILE_POLICY.md  FRICTION_LOG.md  NOW_NEXT_LATER.md  NO_PANIC_POLICY.md  PLUGIN_DEVELOPMENT.md  RC_READINESS.md  README.md  SETUP.md  USER_GUIDE.md  VERIFICATION.md  hardware_prep_report.md  rails.md  (+1 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ac_evo.rs  fuzz_ac_rally.rs  fuzz_acc2_udp.rs  fuzz_acc_udp.rs  fuzz_ams2_udp.rs  fuzz_assetto_corsa.rs  fuzz_automobilista.rs  fuzz_beamng_udp.rs  fuzz_codemasters_udp.rs  fuzz_dakar_udp.rs  fuzz_dirt3_udp.rs  fuzz_dirt4_udp.rs  fuzz_dirt5_udp.rs  fuzz_dirt_rally_2.rs  fuzz_dirt_showdown.rs  fuzz_eawrc_udp.rs  fuzz_ets2_udp.rs  fuzz_f1_25_car_status.rs  fuzz_f1_25_car_telemetry.rs  fuzz_f1_25_header.rs  fuzz_f1_25_normalize.rs  fuzz_f1_manager.rs  fuzz_f1_native.rs  fuzz_f1_udp.rs  fuzz_flatout_udp.rs  fuzz_forza_horizon.rs  fuzz_forza_motorsport.rs  fuzz_gran_turismo_7.rs  fuzz_gran_turismo_sport.rs  fuzz_gravel_simhub.rs  fuzz_grid_2019.rs  fuzz_grid_autosport.rs  fuzz_grid_legends.rs  fuzz_iracing.rs  fuzz_kartkraft_udp.rs  fuzz_le_mans_ultimate.rs  fuzz_lfs_udp.rs  fuzz_motogp_simhub.rs  fuzz_mudrunner_simhub.rs  fuzz_nascar21_udp.rs  (+23 more)
(+489 files in other folders)
