[workspace]
members = [
    "crates/openracing",
    "crates/schemas",
    "crates/ks",
    "crates/srp",
    "crates/hbp",
    "crates/changelog",
    "crates/moza-wheelbase-report",
    "crates/input-maps",
    "crates/hid-moza-protocol",
    "crates/hid-fanatec-protocol",
    "crates/hid-logitech-protocol",
    "crates/hid-thrustmaster-protocol",
    "crates/hid-simagic-protocol",
    "crates/hid-vrs-protocol",
    "crates/hid-simucube-protocol",
    "crates/hid-heusinkveld-protocol",
    "crates/hid-asetek-protocol",
    "crates/hid-button-box-protocol",
    "crates/hid-leo-bodnar-protocol",
    "crates/hid-accuforce-protocol",
    "crates/hid-openffboard-protocol",
    "crates/hid-ffbeast-protocol",
    "crates/hid-cammus-protocol",
    "crates/hid-cube-controls-protocol",
    "crates/hid-pxn-protocol",
    "crates/pidff-common",
    "crates/simplemotion-v2",
    "crates/openracing-atomic",
    "crates/openracing-tracing",
    "crates/openracing-scheduler",
    "crates/openracing-curves",
    "crates/openracing-errors",
    "crates/openracing-filters",
    "crates/openracing-pipeline",
    "crates/openracing-crypto",
    "crates/openracing-plugin-abi",
    "crates/openracing-native-plugin",
    "crates/openracing-wasm-runtime",
    "crates/openracing-test-helpers",
    "crates/openracing-fmea",
    "crates/openracing-watchdog",
    "crates/openracing-hardware-watchdog",
    "crates/openracing-hardware-core",
    "crates/openracing-profile-repository",
    "crates/openracing-profile",
    "crates/openracing-firmware-update",
    "crates/openracing-ipc",
    "crates/openracing-diagnostic",
    "crates/openracing-device-types",
    "crates/openracing-hid-common",
    "crates/openracing-shifter",
    "crates/openracing-handbrake",
    "crates/openracing-telemetry-streams",
    "crates/openracing-ffb",
    "crates/openracing-calibration",
    "crates/engine",
    "crates/service",
    "crates/cli",
    "crates/ui",
    "crates/plugins",
    "crates/plugin-examples",
    "crates/integration-tests",
    "crates/compat",
    "crates/tools",
    "crates/hid-capture",
    "crates/openracing-capture-ids",
    "crates/openracing-capture-format",
    "crates/telemetry-core",
    "crates/telemetry-config",
    "crates/telemetry-adapters",
    "crates/telemetry-lfs",
    "crates/telemetry-ams2",
    "crates/telemetry-simhub",
    "crates/telemetry-mudrunner",
    "crates/telemetry-f1",
    "crates/telemetry-forza",
    "crates/telemetry-rennsport",
    "crates/telemetry-wrc-generations",
    "crates/telemetry-kartkraft",
    "crates/telemetry-raceroom",
    "crates/telemetry-recorder",
    "crates/telemetry-config-writers",
    "crates/telemetry-rate-limiter",
    "crates/telemetry-orchestrator",
    "crates/telemetry-bdd-metrics",
    "crates/telemetry-support",
    "crates/telemetry-integration",
    "crates/telemetry-contracts",
    "workspace-hack",
  ]
default-members = [
    "crates/openracing",
    "crates/tools",
    "crates/cli",
    "crates/service",
    "crates/engine",
    "crates/openracing-ffb",
    "crates/openracing-calibration",
    "crates/openracing-curves",
    "crates/openracing-profile",
    "crates/openracing-plugin-abi",
    "crates/telemetry-core",
    "crates/telemetry-adapters",
    "crates/telemetry-config",
    "crates/telemetry-recorder",
]
exclude = ["third_party/shared_memory", "fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
authors = ["Steven Zimmerman, CPA"]
repository = "https://github.com/EffortlessMetrics/OpenRacing"

[workspace.dependencies]
# Critical async/serialization crates - pinned for compatibility
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.3"
tonic-prost = "0.14.3"
prost = "0.14.3"
prost-types = "0.14.3"
async-trait = "0.1.89"

# Core dependencies
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
quick-xml = "0.37.5"
bincode = { package = "cu-bincode", version = "2.0.2", features = ["serde"] }
anyhow = "1.0.100"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# Real-time and performance
parking_lot = "0.12.5"
crossbeam = "0.8.4"
mimalloc = "0.1.48"

# Workspace-local microcrates
openracing-atomic = { path = "crates/openracing-atomic" }
openracing-tracing = { path = "crates/openracing-tracing" }
openracing-scheduler = { path = "crates/openracing-scheduler" }
openracing-curves = { path = "crates/openracing-curves" }
openracing-errors = { path = "crates/openracing-errors" }
openracing-filters = { path = "crates/openracing-filters" }
openracing-pipeline = { path = "crates/openracing-pipeline" }
openracing-crypto = { path = "crates/openracing-crypto" }
openracing-plugin-abi = { path = "crates/openracing-plugin-abi" }
openracing-native-plugin = { path = "crates/openracing-native-plugin" }
openracing-wasm-runtime = { path = "crates/openracing-wasm-runtime" }
openracing-test-helpers = { path = "crates/openracing-test-helpers" }
openracing-fmea = { path = "crates/openracing-fmea" }
openracing-watchdog = { path = "crates/openracing-watchdog" }
openracing-hardware-watchdog = { path = "crates/openracing-hardware-watchdog" }
openracing-hardware-core = { path = "crates/openracing-hardware-core" }
openracing-profile-repository = { path = "crates/openracing-profile-repository" }
openracing-firmware-update = { path = "crates/openracing-firmware-update" }
openracing-ipc = { path = "crates/openracing-ipc" }
openracing-diagnostic = { path = "crates/openracing-diagnostic" }
openracing-device-types = { path = "crates/openracing-device-types" }
openracing-hid-common = { path = "crates/openracing-hid-common" }
openracing-shifter = { path = "crates/openracing-shifter" }
openracing-handbrake = { path = "crates/openracing-handbrake" }
openracing-ffb = { path = "crates/openracing-ffb" }
openracing-pidff-common = { path = "crates/pidff-common" }
openracing-calibration = { path = "crates/openracing-calibration" }

# System / platform
libc = "0.2.182"

# HID and hardware
hidapi = "2.6.4"
libudev = "0.3.0"
crc32fast = "1.5.0"

# Schema and validation
jsonschema = "0.40.2"

# Testing
criterion = "0.8.2"
proptest = "1.9.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
hdrhistogram = "7.5.4"
insta = "1.46.3"
mockall = "0.14.0"
tokio-test = "0.4.5"
wiremock = "0.6.5"
statistical = "1.0.0"
uuid = { version = "1.21.0", features = ["v4"] }
num_cpus = "1.17.0"

# Additional dependencies
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive"] }
semver = "1.0.27"

# Build dependencies
prost-build = "0.14.3"
tonic-build = "0.14.3"
tonic-prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"

# Observability and metrics
prometheus = "0.14.0"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
sysinfo = "0.38.0"
tokio-stream = "0.1.18"

# System integration dependencies
os_info = "3.14.0"
chrono = { version = "0.4.43", features = ["serde"] }

# Workspace-local crates (prefer workspace deps over per-crate path deps)
racing-wheel-telemetry-config-writers = { path = "crates/telemetry-config-writers" }
racing-wheel-hbp = { path = "crates/hbp" }
racing-wheel-hid-fanatec-protocol = { path = "crates/hid-fanatec-protocol" }
racing-wheel-hid-logitech-protocol = { path = "crates/hid-logitech-protocol" }
racing-wheel-hid-simagic-protocol = { path = "crates/hid-simagic-protocol" }
racing-wheel-hid-vrs-protocol = { path = "crates/hid-vrs-protocol" }
racing-wheel-hid-simucube-protocol = { path = "crates/hid-simucube-protocol" }
racing-wheel-hid-heusinkveld-protocol = { path = "crates/hid-heusinkveld-protocol" }
racing-wheel-hid-asetek-protocol = { path = "crates/hid-asetek-protocol" }
racing-wheel-hid-button-box-protocol = { path = "crates/hid-button-box-protocol" }
racing-wheel-hid-leo-bodnar-protocol = { path = "crates/hid-leo-bodnar-protocol" }
racing-wheel-hid-accuforce-protocol = { path = "crates/hid-accuforce-protocol", version = "0.1.0" }
racing-wheel-simplemotion-v2 = { path = "crates/simplemotion-v2" }
racing-wheel-ks = { path = "crates/ks" }
racing-wheel-moza-wheelbase-report = { path = "crates/moza-wheelbase-report" }
racing-wheel-changelog = { path = "crates/changelog" }
racing-wheel-srp = { path = "crates/srp" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
debug = "line-tables-only"  # Keeps stacktraces but saves massive disk space vs `debug = 2`

[profile.test]
debug = "line-tables-only"  # Prevents 60GiB target/ bloat during workspace cargo test

# Performance-critical profile for RT components
[profile.rt]
inherits = "release"
debug = false
overflow-checks = false

# Windows linker workaround: integration tests pull in every workspace crate
# which exceeds MSVC PDB symbol-table limit (LNK1180/LNK1318) in debug mode.
# See docs/FRICTION_LOG.md F-004.
[profile.test.package.racing-wheel-integration-tests]
debug = false

# Build configuration

[workspace.metadata.publish]
allow = [
    "openracing",
    "openracing-engine",
    "openracing-ffb",
    "openracing-calibration",
    "openracing-curves",
    "openracing-profile",
    "openracing-hid",
    "openracing-pidff",
    "openracing-moza",
    "openracing-firmware-update",
    "openracing-plugin-abi",
    "openracing-plugin-sdk",
    "openracing-telemetry",
    "openracing-telemetry-adapters",
    "openracing-telemetry-config",
    "openracing-telemetry-recorder",
    "openracing-service",
    "wheelctl",
]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Cargo hakari configuration for feature unification
[workspace.metadata.hakari]
resolver = "2"
workspace-hack-crate = "workspace-hack"

# Feature flags for development and testing
[workspace.metadata.features]
default = []
validation = ["dev-features"]
dev-features = []
integration-tests = ["dev-features"]

# Crate features and ownership documentation
[workspace.metadata.crate-ownership]
service-ipc = { owner = "@owner-svc", features = [
    "tonic",
    "prost",
    "async-trait",
] }
cli-client = { owner = "@owner-cli", features = ["clap", "tokio"] }
plugins-wasm = { owner = "@owner-plug", features = ["wasmtime", "wasi"] }
plugins-native = { owner = "@owner-plug", features = [
    "libloading",
    "abi-stable",
] }

[patch.crates-io]
shared_memory = { path = "third_party/shared_memory" }

# ---------------------------------------------------------------------------
# Workspace lint policy (Stage A).
#
# This block is the single source of truth for active lint levels. The
# declarative policy lives in `policy/clippy-lints.toml`; the burndown
# ledger in `policy/clippy-debt.toml`; the panic-family exception ledger
# in `policy/no-panic-allowlist.toml`; the non-Rust file surface in
# `policy/non-rust-allowlist.toml`.
#
# See docs/CLIPPY_POLICY.md for the staging discipline. In short:
#
#   * Existing CI runs `cargo clippy ... -- -D warnings`. Adding a `warn`
#     for a lint with existing debt would therefore promote it to an
#     error and break unrelated jobs (smoke / acceptance / soak / ...).
#     Stage A keeps panic-family and other noisy lints at `allow` here;
#     the semantic checker (scripts/policy_no_panic.py) is the
#     authoritative reporter while debt is being burned down. Each lint
#     gets promoted to `warn` (and then `deny`) only when its
#     corresponding entry in policy/clippy-debt.toml has burndown ready.
#   * Hard denies are limited to lints that are zero-debt today or are
#     obvious correctness bugs (silent failure, async footguns, etc.)
#     where no existing finding has been observed in any crate.
#   * `unsafe_code = "deny"` (NOT forbid): OpenRacing has legitimate RT,
#     HID, and FFI islands receipted with `// SAFETY:` comments.
#   * No global `-D warnings` change in this PR. The next promotion PR
#     ratchets debt items one lint at a time.
#   * No test carveouts in `clippy.toml`. Use the semantic checker.
# ---------------------------------------------------------------------------

[workspace.lints.rust]
# Stage A introduces NO new rust-lint enforcement. The existing tree
# enforces `unsafe_op_in_unsafe_fn` / `unused_must_use` / `static_mut_refs`
# via per-file `#![deny(...)]` attributes in production crates and
# `RUSTFLAGS="-D warnings -D unused_must_use"` in CI. Adding workspace-
# level denies here would either be redundant or risk new regressions in
# crates that currently pass under those rules.

[workspace.lints.clippy]
# Stage A is intentionally empty at the workspace level for managed
# lints. Every panic-family / silent-failure / async / unsafe-memory /
# numeric / file-process / governance lint listed in
# `policy/clippy-debt.toml` is promoted from `allow` -> `warn` (and then
# `deny`) one PR at a time, so each burndown can be reviewed in
# isolation. The semantic no-panic checker
# (`scripts/policy_no_panic.py`) is the authoritative drift
# reporter while debt is being burned down.
#
# The two hard denies below are zero-debt today and have no expected
# false positives:
blanket_clippy_restriction_lints = "deny"
should_panic_without_expect = "deny"
