[package]
name = "openracing-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
openracing-telemetry-adapters = { path = "../crates/telemetry-adapters" }
openracing-telemetry = { path = "../crates/telemetry-core" }
racing-wheel-hid-ffbeast-protocol = { path = "../crates/hid-ffbeast-protocol" }
racing-wheel-hid-moza-protocol = { path = "../crates/hid-moza-protocol" }
racing-wheel-hid-thrustmaster-protocol = { path = "../crates/hid-thrustmaster-protocol" }
racing-wheel-hid-simucube-protocol = { path = "../crates/hid-simucube-protocol", package = "hid-simucube-protocol" }
racing-wheel-hid-asetek-protocol = { path = "../crates/hid-asetek-protocol", package = "hid-asetek-protocol" }
racing-wheel-hid-vrs-protocol = { path = "../crates/hid-vrs-protocol" }
racing-wheel-hid-simagic-protocol = { path = "../crates/hid-simagic-protocol" }
racing-wheel-hid-heusinkveld-protocol = { path = "../crates/hid-heusinkveld-protocol", package = "hid-heusinkveld-protocol" }
racing-wheel-hid-cammus-protocol = { path = "../crates/hid-cammus-protocol" }
racing-wheel-hid-fanatec-protocol = { path = "../crates/hid-fanatec-protocol" }
racing-wheel-hid-openffboard-protocol = { path = "../crates/hid-openffboard-protocol" }
racing-wheel-hid-logitech-protocol = { path = "../crates/hid-logitech-protocol" }
racing-wheel-ks = { path = "../crates/ks" }
racing-wheel-srp = { path = "../crates/srp" }
racing-wheel-hbp = { path = "../crates/hbp" }
racing-wheel-moza-wheelbase-report = { path = "../crates/moza-wheelbase-report" }

racing-wheel-hid-pxn-protocol = { path = "../crates/hid-pxn-protocol" }
openracing-hid-common = { path = "../crates/openracing-hid-common" }
openracing-ipc = { path = "../crates/openracing-ipc", default-features = false }

racing-wheel-hid-button-box-protocol = { path = "../crates/hid-button-box-protocol", package = "hid-button-box-protocol" }
racing-wheel-hid-cube-controls-protocol = { path = "../crates/hid-cube-controls-protocol", package = "hid-cube-controls-protocol" }
racing-wheel-hid-leo-bodnar-protocol = { path = "../crates/hid-leo-bodnar-protocol" }
racing-wheel-hid-accuforce-protocol = { path = "../crates/hid-accuforce-protocol" }
racing-wheel-simplemotion-v2 = { path = "../crates/simplemotion-v2" }
openracing-firmware-update = { path = "../crates/openracing-firmware-update" }
openracing-diagnostic = { path = "../crates/openracing-diagnostic" }
openracing-calibration = { path = "../crates/openracing-calibration" }
openracing-pipeline = { path = "../crates/openracing-pipeline" }
openracing-profile = { path = "../crates/openracing-profile" }
racing-wheel-schemas = { path = "../crates/schemas" }
openracing-telemetry-recorder = { path = "../crates/telemetry-recorder" }
prost = "0.14.3"
serde_json = "1"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }

# Fuzzing requires nightly and release-like optimizations.
[[bin]]
name = "fuzz_ffbeast_input"
path = "fuzz_targets/fuzz_ffbeast_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_f1_25_header"
path = "fuzz_targets/fuzz_f1_25_header.rs"
test = false
doc = false

[[bin]]
name = "fuzz_f1_25_car_telemetry"
path = "fuzz_targets/fuzz_f1_25_car_telemetry.rs"
test = false
doc = false

[[bin]]
name = "fuzz_f1_25_car_status"
path = "fuzz_targets/fuzz_f1_25_car_status.rs"
test = false
doc = false

[[bin]]
name = "fuzz_f1_25_normalize"
path = "fuzz_targets/fuzz_f1_25_normalize.rs"
test = false
doc = false

[[bin]]
name = "fuzz_moza_wheelbase_report"
path = "fuzz_targets/fuzz_moza_wheelbase_report.rs"
test = false
doc = false

[[bin]]
name = "fuzz_moza_hbp_report"
path = "fuzz_targets/fuzz_moza_hbp_report.rs"
test = false
doc = false

[[bin]]
name = "fuzz_moza_handshake_frames"
path = "fuzz_targets/fuzz_moza_handshake_frames.rs"
test = false
doc = false

[[bin]]
name = "fuzz_moza_direct_torque_encode"
path = "fuzz_targets/fuzz_moza_direct_torque_encode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ks_report"
path = "fuzz_targets/fuzz_ks_report.rs"
test = false
doc = false

[[bin]]
name = "fuzz_srp_report"
path = "fuzz_targets/fuzz_srp_report.rs"
test = false
doc = false

[[bin]]
name = "fuzz_thrustmaster_input"
path = "fuzz_targets/fuzz_thrustmaster_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_simucube_input"
path = "fuzz_targets/fuzz_simucube_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_asetek_input"
path = "fuzz_targets/fuzz_asetek_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_vrs_input"
path = "fuzz_targets/fuzz_vrs_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_simagic_input"
path = "fuzz_targets/fuzz_simagic_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_heusinkveld_input"
path = "fuzz_targets/fuzz_heusinkveld_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_logitech_input"
path = "fuzz_targets/fuzz_logitech_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_simplemotion"
path = "fuzz_targets/fuzz_simplemotion.rs"
test = false
doc = false

[[bin]]
name = "fuzz_codemasters_udp"
path = "fuzz_targets/fuzz_codemasters_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_acc_udp"
path = "fuzz_targets/fuzz_acc_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_dirt_rally_2"
path = "fuzz_targets/fuzz_dirt_rally_2.rs"
test = false
doc = false

[[bin]]
name = "fuzz_gran_turismo_7"
path = "fuzz_targets/fuzz_gran_turismo_7.rs"
test = false
doc = false

[[bin]]
name = "fuzz_rbr"
path = "fuzz_targets/fuzz_rbr.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cammus_direct"
path = "fuzz_targets/fuzz_cammus_direct.rs"
test = false
doc = false

[[bin]]
name = "fuzz_fanatec_input"
path = "fuzz_targets/fuzz_fanatec_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_openffboard_input"
path = "fuzz_targets/fuzz_openffboard_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_button_box_input"
path = "fuzz_targets/fuzz_button_box_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cube_controls_input"
path = "fuzz_targets/fuzz_cube_controls_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ets2_udp"
path = "fuzz_targets/fuzz_ets2_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_wreckfest_udp"
path = "fuzz_targets/fuzz_wreckfest_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_rennsport_udp"
path = "fuzz_targets/fuzz_rennsport_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_wrc_generations_udp"
path = "fuzz_targets/fuzz_wrc_generations_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_dirt4_udp"
path = "fuzz_targets/fuzz_dirt4_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_pcars2_udp"
path = "fuzz_targets/fuzz_pcars2_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_lfs_udp"
path = "fuzz_targets/fuzz_lfs_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_raceroom"
path = "fuzz_targets/fuzz_raceroom.rs"
test = false
doc = false

[[bin]]
name = "fuzz_kartkraft_udp"
path = "fuzz_targets/fuzz_kartkraft_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_automobilista"
path = "fuzz_targets/fuzz_automobilista.rs"
test = false
doc = false

[[bin]]
name = "fuzz_leo_bodnar_input"
path = "fuzz_targets/fuzz_leo_bodnar_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_accuforce_input"
path = "fuzz_targets/fuzz_accuforce_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_simhub_udp"
path = "fuzz_targets/fuzz_simhub_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_trackmania_udp"
path = "fuzz_targets/fuzz_trackmania_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_dakar_udp"
path = "fuzz_targets/fuzz_dakar_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_flatout_udp"
path = "fuzz_targets/fuzz_flatout_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_nascar_udp"
path = "fuzz_targets/fuzz_nascar_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_nascar21_udp"
path = "fuzz_targets/fuzz_nascar21_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_wrc_kylotonn_udp"
path = "fuzz_targets/fuzz_wrc_kylotonn_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_v_rally_4_udp"
path = "fuzz_targets/fuzz_v_rally_4_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_rfactor1_udp"
path = "fuzz_targets/fuzz_rfactor1_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_gran_turismo_sport"
path = "fuzz_targets/fuzz_gran_turismo_sport.rs"
test = false
doc = false

[[bin]]
name = "fuzz_grid_autosport"
path = "fuzz_targets/fuzz_grid_autosport.rs"
test = false
doc = false

[[bin]]
name = "fuzz_grid_2019"
path = "fuzz_targets/fuzz_grid_2019.rs"
test = false
doc = false

[[bin]]
name = "fuzz_grid_legends"
path = "fuzz_targets/fuzz_grid_legends.rs"
test = false
doc = false

[[bin]]
name = "fuzz_le_mans_ultimate"
path = "fuzz_targets/fuzz_le_mans_ultimate.rs"
test = false
doc = false

[[bin]]
name = "fuzz_race_driver_grid"
path = "fuzz_targets/fuzz_race_driver_grid.rs"
test = false
doc = false

[[bin]]
name = "fuzz_forza_horizon"
path = "fuzz_targets/fuzz_forza_horizon.rs"
test = false
doc = false

[[bin]]
name = "fuzz_f1_udp"
path = "fuzz_targets/fuzz_f1_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_dirt3_udp"
path = "fuzz_targets/fuzz_dirt3_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_dirt5_udp"
path = "fuzz_targets/fuzz_dirt5_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_dirt_showdown"
path = "fuzz_targets/fuzz_dirt_showdown.rs"
test = false
doc = false

[[bin]]
name = "fuzz_eawrc_udp"
path = "fuzz_targets/fuzz_eawrc_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_f1_native"
path = "fuzz_targets/fuzz_f1_native.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ac_rally"
path = "fuzz_targets/fuzz_ac_rally.rs"
test = false
doc = false

[[bin]]
name = "fuzz_assetto_corsa"
path = "fuzz_targets/fuzz_assetto_corsa.rs"
test = false
doc = false

[[bin]]
name = "fuzz_beamng_udp"
path = "fuzz_targets/fuzz_beamng_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_wtcr_udp"
path = "fuzz_targets/fuzz_wtcr_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_forza_motorsport"
path = "fuzz_targets/fuzz_forza_motorsport.rs"
test = false
doc = false

[[bin]]
name = "fuzz_iracing"
path = "fuzz_targets/fuzz_iracing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_rfactor2"
path = "fuzz_targets/fuzz_rfactor2.rs"
test = false
doc = false

[[bin]]
name = "fuzz_motogp_simhub"
path = "fuzz_targets/fuzz_motogp_simhub.rs"
test = false
doc = false

[[bin]]
name = "fuzz_mudrunner_simhub"
path = "fuzz_targets/fuzz_mudrunner_simhub.rs"
test = false
doc = false

[[bin]]
name = "fuzz_snowrunner_simhub"
path = "fuzz_targets/fuzz_snowrunner_simhub.rs"
test = false
doc = false

[[bin]]
name = "fuzz_gravel_simhub"
path = "fuzz_targets/fuzz_gravel_simhub.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ride5_simhub"
path = "fuzz_targets/fuzz_ride5_simhub.rs"
test = false
doc = false

[[bin]]
name = "fuzz_moza_input"
path = "fuzz_targets/fuzz_moza_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_fanatec_output"
path = "fuzz_targets/fuzz_fanatec_output.rs"
test = false
doc = false

[[bin]]
name = "fuzz_logitech_output"
path = "fuzz_targets/fuzz_logitech_output.rs"
test = false
doc = false

[[bin]]
name = "fuzz_thrustmaster_output"
path = "fuzz_targets/fuzz_thrustmaster_output.rs"
test = false
doc = false

[[bin]]
name = "fuzz_moza_report_parsing"
path = "fuzz_targets/fuzz_moza_report_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_simagic_output"
path = "fuzz_targets/fuzz_simagic_output.rs"
test = false
doc = false

[[bin]]
name = "fuzz_openffboard_encode"
path = "fuzz_targets/fuzz_openffboard_encode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_pxn_input"
path = "fuzz_targets/fuzz_pxn_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_hid_common_report_parser"
path = "fuzz_targets/fuzz_hid_common_report_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_hbp_usb_report"
path = "fuzz_targets/fuzz_hbp_usb_report.rs"
test = false
doc = false

[[bin]]
name = "fuzz_moza_wheelbase_input"
path = "fuzz_targets/fuzz_moza_wheelbase_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ks_report_variants"
path = "fuzz_targets/fuzz_ks_report_variants.rs"
test = false
doc = false

[[bin]]
name = "fuzz_simplemotion_command"
path = "fuzz_targets/fuzz_simplemotion_command.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ipc_header"
path = "fuzz_targets/fuzz_ipc_header.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ipc_message"
path = "fuzz_targets/fuzz_ipc_message.rs"
test = false
doc = false

[[bin]]
name = "fuzz_acc2_udp"
path = "fuzz_targets/fuzz_acc2_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_f1_manager"
path = "fuzz_targets/fuzz_f1_manager.rs"
test = false
doc = false

[[bin]]
name = "fuzz_pcars3_udp"
path = "fuzz_targets/fuzz_pcars3_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ac_evo"
path = "fuzz_targets/fuzz_ac_evo.rs"
test = false
doc = false

[[bin]]
name = "fuzz_seb_loeb_rally"
path = "fuzz_targets/fuzz_seb_loeb_rally.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ams2_udp"
path = "fuzz_targets/fuzz_ams2_udp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_firmware_bundle"
path = "fuzz_targets/fuzz_firmware_bundle.rs"
test = false
doc = false

[[bin]]
name = "fuzz_hardware_version"
path = "fuzz_targets/fuzz_hardware_version.rs"
test = false
doc = false

[[bin]]
name = "fuzz_wbb_header"
path = "fuzz_targets/fuzz_wbb_header.rs"
test = false
doc = false

[[bin]]
name = "fuzz_diagnostic_stream_codec"
path = "fuzz_targets/fuzz_diagnostic_stream_codec.rs"
test = false
doc = false

[[bin]]
name = "fuzz_telemetry_packet"
path = "fuzz_targets/fuzz_telemetry_packet.rs"
test = false
doc = false

[[bin]]
name = "fuzz_profile_load"
path = "fuzz_targets/fuzz_profile_load.rs"
test = false
doc = false

[[bin]]
name = "fuzz_calibration_curve"
path = "fuzz_targets/fuzz_calibration_curve.rs"
test = false
doc = false

[[bin]]
name = "fuzz_filter_pipeline"
path = "fuzz_targets/fuzz_filter_pipeline.rs"
test = false
doc = false

[[bin]]
name = "fuzz_fanatec_command"
path = "fuzz_targets/fuzz_fanatec_command.rs"
test = false
doc = false

[[bin]]
name = "fuzz_logitech_report"
path = "fuzz_targets/fuzz_logitech_report.rs"
test = false
doc = false

[[bin]]
name = "fuzz_thrustmaster_packet"
path = "fuzz_targets/fuzz_thrustmaster_packet.rs"
test = false
doc = false

[[bin]]
name = "fuzz_simucube_frame"
path = "fuzz_targets/fuzz_simucube_frame.rs"
test = false
doc = false

[[bin]]
name = "fuzz_config_parse"
path = "fuzz_targets/fuzz_config_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_replay_format"
path = "fuzz_targets/fuzz_replay_format.rs"
test = false
doc = false

[[bin]]
name = "fuzz_telemetry_f1"
path = "fuzz_targets/fuzz_telemetry_f1.rs"
test = false
doc = false

[[bin]]
name = "fuzz_telemetry_acc"
path = "fuzz_targets/fuzz_telemetry_acc.rs"
test = false
doc = false

[[bin]]
name = "fuzz_proto_decode"
path = "fuzz_targets/fuzz_proto_decode.rs"
test = false
doc = false

[profile.release]
opt-level = 3
debug = true
overflow-checks = true
