[package]
name = "wheelctl"
default-run = "wheelctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/wheelctl"
readme = "README.md"
description = "Command-line tools for configuring and diagnosing OpenRacing"
keywords = ["cli", "config", "diagnostic", "racing", "openracing"]
categories = ["command-line-utilities"]
[[bin]]
name = "wheelctl"
path = "src/main.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
racing-wheel-telemetry-config = { path = "../telemetry-config", version = "0.1.0" }
racing-wheel-telemetry-adapters = { path = "../telemetry-adapters", version = "0.1.0" }
racing-wheel-schemas = { path = "../schemas", version = "0.1.0" }
racing-wheel-hid-moza-protocol = { path = "../hid-moza-protocol", version = "0.1.0" }
racing-wheel-hid-capture = { path = "../hid-capture", version = "0.1.0" }
openracing-hardware-core = { path = "../openracing-hardware-core", version = "0.1.0" }
openracing-pidff-common = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
clap = { version = "4.5.60", features = ["derive", "env", "color"] }
clap_complete = "4.5.65"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
colored = "3.1.1"
indicatif = "0.18.3"
dialoguer = "0.12.0"
dirs = "6.0.0"
chrono = { version = "0.4.43", features = ["serde"] }
rand = "0.9.2"
regex = "1.10.0"
tokio-stream = { workspace = true }
crc32fast = { workspace = true }
hidapi = { workspace = true }
jsonschema = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml", "json"] }
tempfile = "3.25.0"
assert_cmd = "2.1.2"
predicates = "3.1.4"

[lints]
workspace = true
