[package]
name = "compat"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false
description = "Compatibility layer and snapshot tests for OpenRacing schemas"

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]
[dependencies]
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
openracing-hid-common = { workspace = true }
# Only used in test builds - no runtime dependencies

[dev-dependencies]
racing-wheel-engine = { path = "../engine" }
racing-wheel-schemas = { path = "../schemas" }
serde_json = { workspace = true }
insta = { workspace = true, features = ["json"] }
proptest = { workspace = true }

[lints]
workspace = true
