[package]
name = "racing-wheel-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true


[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack", "libudev", "mimalloc", "openracing-hardware-watchdog", "racing-wheel-hid-cammus-protocol"]
development = ["tokio-test"]

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/racing-wheel-engine"
readme = "README.md"
description = "Real-time force feedback engine with 1kHz pipeline for OpenRacing"
keywords = ["engine", "ffb", "real-time", "racing", "openracing"]
categories = ["game-development", "hardware-support", "embedded"]
[dependencies]
racing-wheel-schemas = { path = "../schemas", version = "0.1.0" }
racing-wheel-ks = { path = "../ks", version = "0.1.0" }
racing-wheel-input-maps = { path = "../input-maps", version = "0.1.0" }
racing-wheel-hid-moza-protocol = { path = "../hid-moza-protocol", version = "0.1.0" }
racing-wheel-hid-fanatec-protocol = { path = "../hid-fanatec-protocol", version = "0.1.0" }
racing-wheel-hid-logitech-protocol = { path = "../hid-logitech-protocol", version = "0.1.0" }
racing-wheel-hid-thrustmaster-protocol = { path = "../hid-thrustmaster-protocol", version = "0.1.0" }
hid-simucube-protocol = { path = "../hid-simucube-protocol", version = "0.1.0" }
hid-asetek-protocol = { path = "../hid-asetek-protocol", version = "0.1.0" }
racing-wheel-hid-simagic-protocol = { path = "../hid-simagic-protocol", version = "0.1.0" }
racing-wheel-hid-vrs-protocol = { path = "../hid-vrs-protocol", version = "0.1.0" }
hid-heusinkveld-protocol = { path = "../hid-heusinkveld-protocol", version = "0.1.0" }
racing-wheel-hid-openffboard-protocol = { path = "../hid-openffboard-protocol", version = "0.1.0" }
racing-wheel-hid-ffbeast-protocol = { path = "../hid-ffbeast-protocol", version = "0.1.0" }
racing-wheel-hid-cammus-protocol = { path = "../hid-cammus-protocol", version = "0.1.0" }
racing-wheel-hid-pxn-protocol = { path = "../hid-pxn-protocol", version = "0.1.0" }
hid-cube-controls-protocol = { path = "../hid-cube-controls-protocol", version = "0.1.0" }
racing-wheel-hid-leo-bodnar-protocol = { workspace = true }
racing-wheel-hid-accuforce-protocol = { workspace = true }
racing-wheel-simplemotion-v2 = { path = "../simplemotion-v2", version = "0.1.0" }
hid-button-box-protocol = { path = "../hid-button-box-protocol", version = "0.1.0" }
openracing-atomic = { workspace = true }
openracing-tracing = { workspace = true }
openracing-curves = { workspace = true }
openracing-errors = { workspace = true }
openracing-hid-common = { workspace = true }
openracing-filters = { workspace = true }
openracing-fmea = { workspace = true }
openracing-watchdog = { workspace = true }
openracing-hardware-watchdog = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt-multi-thread"] }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
mimalloc = { workspace = true, optional = true }
async-trait = "0.1.89"
rand = "0.9.2"
chrono = { version = "0.4.43", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
bincode = { workspace = true }
crc32c = "0.6.8"
crc32fast = { workspace = true }
flate2 = "1.1.9"
zip = "7.2.0"
sysinfo = { workspace = true }
prometheus = { workspace = true }
metrics = { workspace = true }
hdrhistogram = { workspace = true }
tokio-stream = { version = "0.1.18", features = ["sync"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml", "json"] }
tracing-test = "0.2.5"
tokio-test = "0.4.5"
tracing-subscriber = "0.3.22"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
tempfile = "3.25.0"
compat = { path = "../compat", version = "0.1.0" }
proptest = { workspace = true }
num_cpus = { workspace = true }
criterion = { workspace = true }
openracing-test-helpers = { workspace = true }
openracing-calibration = { workspace = true }
openracing-ffb = { workspace = true }
trybuild = "1.0.114"

# Enable harness feature for integration tests and examples
[dev-dependencies.racing-wheel-engine]
path = "."
features = ["harness"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_Security",
    "Win32_System_Power",
    "Win32_System_Diagnostics_Etw",
    # Device notification features
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    # Overlapped I/O features for HID writes
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
] }
hidapi = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
libudev = { workspace = true }

[features]
default = ["mimalloc"]
rt-allocator = ["mimalloc"]
rt-hardening = []          # opt-in RT allocation tracking and hot-path enforcement
harness = []                # opt-in visibility for the test harness in non-test builds

[[example]]
name = "virtual_device_demo"
required-features = ["harness"]

[[test]]
name = "virtual_device_integration"
required-features = ["harness"]

[[bench]]
name = "rt_timing"
harness = false
path = "../../benches/rt_timing.rs"

[lints]
workspace = true
