[package]
name = "racing-wheel-hbp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/racing-wheel-hbp"
readme = "README.md"
description = "Moza HBP handbrake USB HID protocol parsing and support"
keywords = ["moza", "handbrake", "hid", "racing", "usb"]
categories = ["hardware-support", "no-std"]
[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
