[package]
name = "racing-wheel-hid-accuforce-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "SimExperience AccuForce USB HID protocol constants and device classification"

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/racing-wheel-hid-accuforce-protocol"
readme = "README.md"
keywords = ["accuforce", "hid", "usb", "racing", "protocol"]
categories = ["hardware-support", "no-std"]
[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
openracing-pidff-common = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
insta = "1.46.3"
proptest = { workspace = true }

[lints]
workspace = true
